# qvi-software

./: .gitignore  Makefile  capabilities-hackathon.md  capabilities.md  logo  pyproject.toml  readme.md  ruff.toml
base/Alice/: data.mdb  lock.mdb
base/witness/: lock.mdb
config/: demo-witness-oobis.json
data/: multisig-1-sample.json
docs/: index.html  recommended_versions.json
features/: environment.py  mutlisig-export-import.feature
features/helpers/: check_dodoer.py  context_merge.py  create_witness_config_file.py  requester.py  root.py  runner.py
features/steps/: all.py  init_aid.py  oobi.py
qvi-workflow/: README.md  docker-compose-keria_signify_qvi.yaml  docker-compose-qvi-workflow-kli.yaml  keria-signify-docker.env  kli-commands.sh  package-lock.json  package.json  qvi-workflow-keria_signify_qvi-docker.sh  qvi-workflow-keria_signify_qvi.sh  qvi-workflow-kli-docker.sh  qvi-workflow-kli.sh
qvi-workflow/keria_cli/: vlei-workflow.sh
qvi-workflow/keria_docker/: .gitignore  Makefile  README.md  color-printing.sh  docker-compose-keria_signify_qvi.yaml  keria-signify-docker.env  kli-commands.sh  package-lock.json  qvi-workflow-keria_signify_qvi-docker.sh  signify-ts.Dockerfile  tool-shell.dockerfile  vlei-workflow.sh
qvi-workflow/keria_kli/: .gitignore  README.md  vlei-env.sh  vlei-workflow.sh
qvi-workflow/kli_docker/: .gitignore  README.md  kli-commands.sh  (+4 more)
tested-stacks/: running-tests.md  stack_A-docker-compose.yaml
tests/: test_context_merge.py  test_environment.py  test_init_aid.py  test_root.py
tsx-image/: Dockerfile  Makefile  README.md
(+208 files in other folders)
